<resources>
    <string name="app_name">ABHIKR</string>
    <string name="account_balance">Portfolio</string>
    <string name="balance_currency">Gerg</string>
    <string name="balance_amount">Abhi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Verify now</string>
    <string name="verify_phone_auth">Confirm</string>
    <string name="resend_phone_auth">Resend</string>
    <!--sports dialog-->
    <string name="title">Updating…</string>
    <string name="show_default">Show default dialog</string>
    <string name="show_styled">Show styled dialog</string>
    <string name="show_message">Show custom message dialog</string>
    <string name="show_message_style">Show custom message AND style dialog</string>
    <!-- Sign-in status messages -->

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="name">Name :</string>
    <string name="YOUR_ADMOB_APP_ID">ca-app-pub-1434360809532426~7820648808</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_work_station">WorkStation</string>
    <string name="action_button_toast_text">AbhiKr Web with URL: %s</string>
    <string name="toolbar_toast_text">AbhiKr Search Product URL: %s</string>
    <string name="unknown_toast_text">Unknown Action Clicked with URL: %s</string>
    <string name="menu_item_title">AbhiKr Home</string>
    <array name="swipe_colors">
        <item>@color/red_500</item>
        <item>@color/pink_500</item>
        <item>@color/purple_500</item>
        <item>@color/deep_purple_500</item>
        <item>@color/indigo_500</item>
        <item>@color/blue_500</item>
        <item>@color/light_blue_500</item>
        <item>@color/cyan_500</item>
        <item>@color/teal_500</item>
        <item>@color/green_500</item>
        <item>@color/light_green_500</item>
        <item>@color/lime_500</item>
        <item>@color/yellow_500</item>
        <item>@color/orange_500</item>
        <item>@color/deep_orange_500</item>
        <item>@color/brown_500</item>
        <item>@color/grey_500</item>
        <item>@color/blue_grey_500</item>
    </array>
    <string name="title_activity_work_store">WorkStore</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://www.abhikr.com/.well-known/assetlinks.json\" }]</string>
</resources>
